# Attestar

./: .gitignore  Cargo.toml  README.md  deployment.json  index.html
contracts/attestation/: Cargo.toml
contracts/attestation/src/: lib.rs  test.rs
data/: mock-balances.json
docs/: demo-script.md  design-brief.md
docs/superpowers/plans/: 2026-06-26-stellar-zk-proof-of-reserves.md
docs/superpowers/specs/: 2026-06-26-stellar-zk-proof-of-reserves-design.md
frontend/: app.js  config.json  index.html  por-verify.js  por-verify.test.mjs  style.css
host/: Cargo.toml
host/src/: main.rs
host/tests/: guest_journal.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
por-core/: Cargo.toml
por-core/src/: lib.rs
scripts/: demo.sh  setup-testnet.sh
verifier-cli/: Cargo.toml
verifier-cli/src/: main.rs
verifier-cli/tests/: cli.rs
