[workspace]
resolver = "2"
members = ["por-core", "methods", "host"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
risc0-zkvm = "3.0"
risc0-build = "3.0"
risc0-ethereum-contracts = "3.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
