[package]
name = "verifier-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
por-core = { path = "../por-core" }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
por-core = { path = "../por-core" }
serde_json = { workspace = true }
hex = { workspace = true }
