[package]
name = "por-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "por-guest"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
por-core = { path = "../../por-core" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
